--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.3",
+    "recharts": "^2.0.8",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
